[feature] plp and pdp pages
