# storage/api-docs/api-docs.json
@@ -231,6 +231,8 @@
                                 "supplier_id": 1,
                                 "type_id": 4,
                                 "name": "Nelco",
+                                "description": "Medicine to treat flu symptoms such as runny nose, stuffy nose, sneezing accompanied by coughing.",
+                                "cover_image": "https://d2qjkwm11akmwu.cloudfront.net/products/668244_18-12-2019_10-46-21-1665809352.webp",
                                 "stock": 21,
                                 "price": 26500
                             }
@@ -338,6 +340,8 @@
                                 "supplier_id": 1,
                                 "type_id": 4,
                                 "name": "Nelco",
+                                "description": "Medicine to treat flu symptoms such as runny nose, stuffy nose, sneezing accompanied by coughing.",
+                                "cover_image": "https://d2qjkwm11akmwu.cloudfront.net/products/668244_18-12-2019_10-46-21-1665809352.webp",
                                 "stock": 21,
                                 "price": 26500
                             }
@@ -574,6 +578,14 @@
                     "name": {
                         "type": "string",
                         "example": "Counter Pain"
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "Description of medicine product"
+                    },
+                    "cover_image": {
+                        "type": "string",
+                        "example": "https://d2qjkwm11akmwu.cloudfront.net/products/668244_18-12-2019_10-46-21-1665809352.webp"
                     },
                     "stock": {
                         "type": "integer",
